# microservice-apis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
part1/: abstract.md
part1/ch1/: note.md
part1/ch2/: app.py  oas.yaml
part1/ch2/orders/api/: api.py  schemas.py
part1/ch3/: note.md
part2/ch4/: note.md
part2/ch5/: oas.yaml
part2/ch6/kitchen/: app.py  oas.yaml
part2/ch6/kitchen/api/: api.py  schemas.py  type.py
part2/ch6/orders/: app.py  oas.yaml
part2/ch6/orders/api/: api.py  schemas.py
part2/ch7/: note.md  package-lock.json
part2/ch7/api_docs/: kitchen.yaml  orders.yaml  payments.yaml
part2/ch7/config/: env_config.py
part2/ch7/migrations/: env.py
part2/ch7/migrations/versions/: 046cad1a6e28_initial_migration.py
part2/ch7/orders/: types.py
part2/ch7/orders/domain/: order.py
part2/ch7/orders/orders_service/: interface.py  note.md  orders.py  orders_service.py
part2/ch7/orders/repository/: interface.py  models.py  note.md  orders_repository.py  unit_of_work.py
part2/ch7/orders/web/: app.py
part2/ch7/orders/web/api/: api.py  schemas.py
