[tool.poetry]
name = "microservice-api"
version = "0.1.0"
description = "実践マイクロサービスAPIの学習用コード"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "microservice_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pyyaml = "^6.0.1"
flask-smorest = "^0.42.3"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
